# iai-personal-memory-engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
bench/: _night_runner.py  analyze_arousal_ab.py  consolidation_rss_peak.py  contradiction_longitudinal_claude.py  embed_warm_cost.py  longmemeval_blind.py  personal_fact_drift.py  pipeline_stage_timings.py  total_session_cost.py
docs/: DEPLOYMENT.md
rust/: deny.toml
rust/iai_mcp_embed_core/: Cargo.toml
rust/iai_mcp_embed_core/src/: bert.rs  lib.rs
rust/iai_mcp_embed_core/tests/: numeric_parity.rs  tokenizer_api_smoke.rs
rust/iai_mcp_native/: Cargo.toml  pyproject.toml
scripts/: check_no_networkx_in_main_install.sh  com.iai-mcp.daemon.plist.template  idle_cpu_regression_fence.sh  install.sh  uninstall.sh  update.sh
src/: embed.pyi  graph.pyi  iai_mcp_native.pyi
tests/: _helpers.py  _perf_helpers.py  conftest.py  conftest_short_socket.py  test_active_forgetting.py  test_bench_lme_blind_checkpoint.py  test_bench_lme_blind_preflight.py  test_bench_neural_map.py  test_bench_ops_10_latency_regression.py  test_bench_ops_12_total_session_cost.py  test_bench_verbatim_flags.py  test_bench_worktree_resolution.py  test_capture.py  test_capture_noise_filter.py  test_cascade_cooldown.py  test_cli_crypto.py  test_cli_daemon_install_python_path.py  test_cli_maintenance_sleep_cycle.py  test_cli_subprocess_daemon_down.py  test_concurrent_wrapper_spawn.py  test_consolidation_output_parity.py  test_crisis_mode_auto_expiry.py  test_cross_session_e2e.py  test_daemon.py  test_daemon_fdlimit_and_fsm.py  test_daemon_kill_mid_consolidation_lossless.py  test_daemon_tick_yields_to_mcp_activity.py  test_daemon_watchdog.py  test_daemon_watchdog_sleep_stale.py  test_direct_write_twophase.py  test_dmn03_client_bounded.py  test_dmn_meta.py  test_doctor.py  test_doctor_avx2_row.py  test_doctor_headless_downgrade.py  (+63 more)
(+68 files in other folders)
