[package]
name    = "iai_mcp_embed_core"
version = "0.1.0"
edition = "2021"
license.workspace    = true
repository.workspace = true

[lib]
name       = "iai_mcp_embed_core"
crate-type = ["rlib"]    # only the native wrapper crate (iai_mcp_native) ships the cdylib

[features]
default          = ["accelerate"]
accelerate       = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
metal            = ["candle-core/metal", "candle-nn/metal"]
extension-module = ["pyo3/extension-module"]   # opt-in; activated by maturin via pyproject.toml ONLY

[dependencies]
candle-core    = { workspace = true }
candle-nn      = { workspace = true }
safetensors    = { workspace = true }
tokenizers     = { workspace = true }
hf-hub         = { workspace = true }
pyo3           = { workspace = true }
accelerate-src = { workspace = true, optional = true }
pyo3-stub-gen  = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
dirs = "5"
sha2 = "0.10"
