[package]
name    = "iai_mcp_native"
version = "0.1.0"
edition = "2021"
license.workspace    = true
repository.workspace = true

[lib]
name       = "iai_mcp_native"
crate-type = ["cdylib", "rlib"]    # cdylib ships the wheel; rlib lets the stub_gen binary link

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[features]
default          = []
accelerate       = ["iai_mcp_embed_core/accelerate"]
metal            = ["iai_mcp_embed_core/metal"]
extension-module = ["pyo3/extension-module"]   # opt-in; activated by maturin via pyproject.toml ONLY

[dependencies]
pyo3                = { workspace = true }
pyo3-stub-gen       = { workspace = true }
iai_mcp_embed_core  = { path = "../iai_mcp_embed_core" }
iai_mcp_graph_core  = { path = "../iai_mcp_graph_core" }
